--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Husain Leel</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Merriweather&family=Montserrat&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -34,12 +36,34 @@
         <p class="skill-text">Beleive me, you can learn it in few hours!</p>
       </div>
       <div class="skill-row">
-        <img class="my-skills-img" id="problem_solver" src="https://media3.giphy.com/media/PhZUlbAA4JPNEkv1bo/giphy.gif?cid=ecf05e47f453cbe6932d5d75c3215c3d6cd1d2e8448a8c8e&rid=giphy.gif" alt="">
-        <h3> <br> <br> I am a problem solver!  </h3>
+        <img class="my-skills-img" id="problem_solver"
+          src="https://media3.giphy.com/media/PhZUlbAA4JPNEkv1bo/giphy.gif?cid=ecf05e47f453cbe6932d5d75c3215c3d6cd1d2e8448a8c8e&rid=giphy.gif"
+          alt="">
+        <h3> <br> <br> I am a problem solver! </h3>
         <p class="skill-text">Problem solving skill can be a bane sometimes instead of being a boon!.</p>
       </div>
     </div>
-    <hr>
+
+
+    <div class="websites">
+      <h2>Projects i built.</h2>
+      <div class="col1">
+        <a href="https://husainleel.github.io/interactive-pricing/">Interactive pricing!</a>
+        <a href="https://husainleel.github.io/playdice/">Dice-game</a>
+        <a href="https://husainleel.github.io/Simon-Game/">Simon-Game</a>
+        <a href="https://husainleel.github.io/Drum-Kit-/">Drum-kit!</a>
+        <a href="https://husainleel.github.io/stats-preview-card/">Stats-card</a>
+        <a href="https://shielded-cove-77221.herokuapp.com/">Newsletter-Signup</a>
+        <a href="https://intense-dawn-39735.herokuapp.com/Home">Todolist!</a>
+
+      </div>
+
+      <div class="col2">
+
+      </div>
+
+    </div>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Meeting somebody always widens your horizons.</h3><br>
